--- a/index.html
+++ b/index.html
@@ -11,24 +11,15 @@
         <h1>Collection</h1>
         <div>
             <button class="tag" id="All">All</button>
-            <button class="tag" id="Java">Data-Tag</button>
+            <button class="tag" id="problem-solving">Problem Solving</button>
         </div>
-        <a class="link-a" data-tag="Java" href="Text/Section0049.xhtml">
+        <a class="link-a" data-tag="problem-solving" href="Text/Section0049.xhtml">
             <div class="link-div">
-                <p class="headline">Title 1</p>
-                <p class="preview">
-                    Summary 1。</p>
-                <p class="date">date1</p>
+                <p class="headline">Bulletproof Problem Solving</p>
+                <p class="preview">Table of Content</p>
+                <p class="date">March 2019</p>
             </div>
         </a>
-        <a class="link-a" data-tag="Java" href="Text/Section0049.xhtml">
-            <div class="link-div">
-                <p class="headline">Title 2</p>
-                <p class="preview">
-                    Summary 1。</p>
-                <p class="date">date2</p>
-            </div>
-        </a>        
 
 
 
