--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <button class="tag" id="All">All</button>
             <button class="tag" id="problem-solving">Problem Solving</button>
         </div>
-        <a class="link-a" data-tag="problem-solving" href="Text/Section0049.xhtml">
+        <a class="link-a" data-tag="problem-solving" href="bulletproof-problem-solving-9781119553021/navigation.xhtml">
             <div class="link-div">
                 <p class="headline">Bulletproof Problem Solving</p>
                 <p class="preview">Table of Content</p>
