--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
-    <title>CSY's Blog</title>
+    <title>Book Collections</title>
     <link href="index.css" rel="stylesheet">
 </head>
 
