--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <a class="link-a" data-tag="problem-solving" href="bulletproof-problem-solving-9781119553021/navigation.xhtml">
             <div class="link-div">
                 <p class="headline">Bulletproof Problem Solving</p>
-                <p class="preview">Table of Content</p>
+                <p class="preview">By Charles Conn, Robert McLean</p>
                 <p class="date">March 2019</p>
             </div>
         </a>
