--- a/index.html
+++ b/index.html
@@ -15,13 +15,19 @@
         </div>
         <a class="link-a" data-tag="problem-solving" href="bulletproof-problem-solving-9781119553021/navigation.xhtml">
             <div class="link-div">
-                <p class="headline">Bulletproof Problem Solving</p>
-                <p class="preview">By Charles Conn, Robert McLean</p>
-                <p class="date">March 2019</p>
+                <p class="headline">Bulletproof Problem Solving: The One Skill That Changes Everything</p>
+                <p class="preview">Authors	Charles Conn, Robert McLean</p>
+                <p class="date">John Wiley & Sons, 2019</p>
             </div>
         </a>
 
-
+        <a class="link-a" data-tag="finance" href="financial-ratios-for-executives-9781484207321/9781484207321_FM_7_Contents.xhtml">
+            <div class="link-div">
+                <p class="headline">Financial Ratios for Executives: How to Assess Company Strength, Fix Problems, and Make Better Decisions</p>
+                <p class="preview">Authors	Michael Rist, Albert J. Pizzica, PENHAGENCO LLC</p>
+                <p class="date">Apress, 2014</p>
+            </div>
+        </a>
 
 
 
