--- a/index.html
+++ b/index.html
@@ -120,6 +120,24 @@
             </div>
         </a>
 
+        <a class="link-a" data-tag="team-management" href="how-to-talk-finance-9781292074412/html/contents.html">
+            <div class="link-div">
+                <p class="headline">Simple Numbers, Straight Talk, Big Profits!: 4 Keys to Unlock Your Business Potential</p>
+                <p class="preview">Authors: Gregory Burges Crabtree</p>
+                <p class="date">Greenleaf Book Group, 2011</p>
+            </div>
+        </a>
+
+
+
+
+
+
+
+
+
+
+
 
 
 
