--- a/index.html
+++ b/index.html
@@ -112,11 +112,28 @@
             </div>
         </a>
 
-        <a class="link-a" data-tag="team-management" href="how-to-talk-finance-9781292074412/html/contents.html">
+        <a class="link-a" data-tag="finance" href="how-to-talk-finance-9781292074412/html/contents.html">
             <div class="link-div">
                 <p class="headline">How To Talk Finance</p>
                 <p class="preview">Authors: Ted Wainman</p>
                 <p class="date">Pearson Education Limited, 2015</p>
+            </div>
+        </a>
+
+        <a class="link-a" data-tag="finance" href="simple-numbers-straight-talk-big-profits-9781608322398/OEBPS/contents.html">
+            <div class="link-div">
+                <p class="headline">Simple Numbers, Straight Talk, Big Profits!: 4 Keys to Unlock Your Business Potential</p>
+                <p class="preview">Authors: Gregory Burges Crabtree</p>
+                <p class="date">Greenleaf Book Group, 2011</p>
+            </div>
+        </a>
+
+
+        <a class="link-a" data-tag="team-management" href="warren-buffett-and-financial-statements-9781849833240/OEBPS/contents.html">
+            <div class="link-div">
+                <p class="headline">Warren Buffett and the Interpretation of Financial Statements: The Search for the Company with a Durable Competitive Advantage</p>
+                <p class="preview">Authors: Mary Buffett, David Clark</p>
+                <p class="date">Simon and Schuster, 2011</p>
             </div>
         </a>
 
@@ -128,13 +145,13 @@
             </div>
         </a>
 
-
-
-
-
-
-
-
+        <a class="link-a" data-tag="team-management" href="how-to-talk-finance-9781292074412/html/contents.html">
+            <div class="link-div">
+                <p class="headline">Simple Numbers, Straight Talk, Big Profits!: 4 Keys to Unlock Your Business Potential</p>
+                <p class="preview">Authors: Gregory Burges Crabtree</p>
+                <p class="date">Greenleaf Book Group, 2011</p>
+            </div>
+        </a>
 
 
 
