--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             </div>
         </a>
 
-        <a class="link-a" data-tag="finance" href="key-management-ratios-9780273707318/navigation.xhtml">
+        <a class="link-a" data-tag="finance" href="key-management-ratios-9780273707318/contents.html">
             <div class="link-div">
                 <p class="headline">Key Management Ratios: The Clearest Guide to the Critical Numbers that Drive Your Business</p>
                 <p class="preview">Author: Ciaran Walsh</p>
