--- a/key-management-ratios-9780273707318/contents.html
+++ b/key-management-ratios-9780273707318/contents.html
@@ -5,7 +5,7 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<title>Accounting for the Numberphobic</title>
+<title>Key Management Ratios</title>
 <link rel="stylesheet" type="text/css" href="../override_v1.css"/>
 <link rel="stylesheet" type="text/css" href="../styles/stylesheet.css"/>
 </head>
