--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
         <a class="link-a" data-tag="accounting" href="the-joy-of-accounting-9781735312927/OPS/section-0003.xhtml">
             <div class="link-div">
                 <p class="headline">The Joy of Accounting: A Game-Changing Approach That Makes Accounting Easy</p>
-                <p class="preview">Author: Ciaran Walsh</p>
-                <p class="date">Prentice Hall/Financial Times, 2006</p>
+                <p class="preview">Author: Mark Robilliard, Peter Frampton</p>
+                <p class="date">Wealthvox Limited, 2020</p>
             </div>
         </a>
 
