--- a/the-joy-of-accounting-9781735312927/OPS/section-0003.xhtml
+++ b/the-joy-of-accounting-9781735312927/OPS/section-0003.xhtml
@@ -2,7 +2,7 @@
 <head>
 <meta content="application/xhtml+xml; charset=UTF-8" http-equiv="Content-Type"/>
 <link href="styles.css" rel="stylesheet" type="text/css"/>
-<title>Contents</title>
+<title>The Joy of Accounting: A Game-Changing Approach That Makes Accounting Easy</title>
 <meta content="urn:uuid:78e284e6-bbf8-40db-84df-505c66906d86" name="Adept.expected.resource"/>
 </head>
 <body>
