--- a/warren-buffett-and-financial-statements-9781849833240/OEBPS/contents.html
+++ b/warren-buffett-and-financial-statements-9781849833240/OEBPS/contents.html
@@ -5,7 +5,7 @@
       xmlns="http://www.w3.org/1999/xhtml"
       xmlns:epub="http://www.idpf.org/2007/ops">
 <head>
-<title>The Whole Brain Business Book, Second Edition: Unlocking the Power of Whole Brain Thinking in Organizations, Teams, and Individuals, 2nd Edition</title>
+<title>Warren Buffett and the Interpretation of Financial Statements</title>
 <link rel="stylesheet" type="text/css" href="override_v1.css"/>
 <link rel="stylesheet" type="text/css" href="0071843833.css"/>
 </head>
