--- a/the-great-mental-models-1-9781999449001/text/part0006_split_000.html
+++ b/the-great-mental-models-1-9781999449001/text/part0006_split_000.html
@@ -43,5 +43,84 @@
     <li value="16" class="calibre6"><a href="part0040.html#164MG0-b1835622d0c74972bfe15f4d75e1fdaa" class="calibre5">Causation vs. Correlation</a></li>
 
     <li class="akkurat_regular2" value="17"><a href="part0053.html#1IHDQ0-b1835622d0c74972bfe15f4d75e1fdaa" class="calibre5">Acknowledgements</a></li>
-  </ol></nav>
+  </ol>
+
+  <P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0000.html">part0000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0001.html">part0001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0002.html">part0002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0003.html">part0003.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0004.html">part0004.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0005.html">part0005.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0006_split_000.html">part0006_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0006_split_001.html">part0006_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0007.html">part0007.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0008.html">part0008.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0009.html">part0009.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0010.html">part0010.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0011.html">part0011.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0012.html">part0012.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0013_split_000.html">part0013_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0013_split_001.html">part0013_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0014.html">part0014.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0015.html">part0015.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0016.html">part0016.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0017_split_000.html">part0017_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0017_split_001.html">part0017_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0017_split_002.html">part0017_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0017_split_003.html">part0017_split_003.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0018.html">part0018.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0019.html">part0019.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0020.html">part0020.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0021_split_000.html">part0021_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0021_split_001.html">part0021_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0021_split_002.html">part0021_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0022.html">part0022.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0023.html">part0023.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0024.html">part0024.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0025.html">part0025.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0026.html">part0026.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0027.html">part0027.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0028.html">part0028.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0029.html">part0029.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0030_split_000.html">part0030_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0030_split_001.html">part0030_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0030_split_002.html">part0030_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0031.html">part0031.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0032.html">part0032.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0033.html">part0033.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0034.html">part0034.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0035_split_000.html">part0035_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0035_split_001.html">part0035_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0035_split_002.html">part0035_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0036.html">part0036.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0037.html">part0037.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0038.html">part0038.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0039_split_000.html">part0039_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0039_split_001.html">part0039_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0039_split_002.html">part0039_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0039_split_003.html">part0039_split_003.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0039_split_004.html">part0039_split_004.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0040.html">part0040.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0041.html">part0041.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0042.html">part0042.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0043.html">part0043.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0044_split_000.html">part0044_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0044_split_001.html">part0044_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0044_split_002.html">part0044_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0045.html">part0045.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0046.html">part0046.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0047.html">part0047.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0048_split_000.html">part0048_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0048_split_001.html">part0048_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0048_split_002.html">part0048_split_002.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0049.html">part0049.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0050.html">part0050.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0051.html">part0051.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0052_split_000.html">part0052_split_000.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0052_split_001.html">part0052_split_001.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0053.html">part0053.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0054.html">part0054.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0055.html">part0055.html</A> </P>
+<P><A href="https://guylearning.github.io/books/the-great-mental-models-1-9781999449001/text/part0056.html">part0056.html</A> </P>
+</nav>
   </body></html>
