--- a/index.html
+++ b/index.html
@@ -180,9 +180,37 @@
             </div>
         </a>
 
+        <a class="link-a" data-tag="finance" href="the-essential-cfo-9781118240038/OEBPS/9781118240038_epub_cov.htm">
+            <div class="link-div">
+                <p class="headline">The Essential CFO: A Corporate Finance Playbook</p>
+                <p class="preview">Authors: Bruce P. Nolop</p>
+                <p class="date">John Wiley & Sons, 2012</p>
+            </div>
+        </a>
 
+        <a class="link-a" data-tag="finance" href="accounting-for-fun-9781631575143/xhtml/05_Contents.xhtml">
+            <div class="link-div">
+                <p class="headline">Accounting for Fun and Profit: A Guide to Understanding Advanced Topics in Accounting</p>
+                <p class="preview">Authors: Lawrence A. Weiss</p>
+                <p class="date">Business Expert Press, 2016</p>
+            </div>
+        </a>
 
+        <a class="link-a" data-tag="finance" href="accounting-for-fun-9781631575129/xhtml/06_Contents.xhtml">
+            <div class="link-div">
+                <p class="headline">Accounting For Fun and Profit: A Guide to Understanding Financial Statements</p>
+                <p class="preview">Authors: Lawrence A. Weiss</p>
+                <p class="date">Business Expert Press, 2016</p>
+            </div>
+        </a>
 
+        <a class="link-a" data-tag="finance" href="finance-for-it-9781780171227/06_FinanceforIT_toc.xhtml">
+            <div class="link-div">
+                <p class="headline">Finance for IT Decision Makers: A Practical Handbook</p>
+                <p class="preview">Authors: Michael Blackstaff</p>
+                <p class="date">BCS Learning & Development Limited, 2012</p>
+            </div>
+        </a>
 
     </div>
 </body>
