--- a/index.html
+++ b/index.html
@@ -218,6 +218,13 @@
                 <p class="date">MJ Lane Publishing, 2020</p>
             </div>
         </a>
+        <a class="link-a" data-tag="problem-solving" href="problem-solving-101-9781101029183/OEBPS/navDoc.xhtml">
+            <div class="link-div">
+                <p class="headline">Problem Solving 101: A Simple Book for Smart People</p>
+                <p class="preview">Authors: Ken Watanabe</p>
+                <p class="date">Penguin, 2009</p>
+            </div>
+        </a>        
     </div>
 </body>
 <script src="index.js"></script>
