--- a/index.html
+++ b/index.html
@@ -224,6 +224,13 @@
                 <p class="preview">Authors: Ken Watanabe</p>
                 <p class="date">Penguin, 2009</p>
             </div>
+        </a> 
+        <a class="link-a" data-tag="cs" href="learning-web-design-9781491960196/lwd5_contents.xhtml">
+            <div class="link-div">
+                <p class="headline">Learning Web Design: A Beginner's Guide to HTML, CSS, JavaScript, and Web Graphics</p>
+                <p class="preview">Authors: Jennifer Niederst Robbins</p>
+                <p class="date">O'Reilly Media, Inc., 2018</p>
+            </div>
         </a>        
     </div>
 </body>
