--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <button class="tag" id="critical-thinking">Critical Thinking</button>
             <button class="tag" id="business">Business</button>
             <button class="tag" id="mental-model">Mental Model</button>
+            <button class="tag" id="cs">CS</button>
         </div>
         <a class="link-a" data-tag="problem-solving" href="bulletproof-problem-solving-9781119553021/navigation.xhtml">
             <div class="link-div">
@@ -164,7 +165,7 @@
             </div>
         </a>
 
-        <a class="link-a" data-tag="mental-model" href="the-great-mental-models-1-9781999449001/text/part0006_split_000.html">
+        <a class="link-a" data-tag="mental-model" href="the-great-mental-models-1-9781999449001/index.html">
             <div class="link-div">
                 <p class="headline">The Great Mental Models Volume 1: General Thinking Concepts</p>
                 <p class="preview">Authors: Rhiannon Beaubien, Shane Parrish</p>
@@ -232,6 +233,37 @@
                 <p class="date">O'Reilly Media, Inc., 2018</p>
             </div>
         </a>        
+        <a class="link-a" data-tag="cs" href="learn-enough-developer-9780137843404/nav.xhtml">
+            <div class="link-div">
+                <p class="headline">Learn Enough Developer Tools to Be Dangerous (2022): Command Line, Text Editor, and Git Version Control Essentials</p>
+                <p class="preview">Authors: Michael Hartl</p>
+            </div>
+        </a>    
+        <a class="link-a" data-tag="cs" href="learn-enough-html-9780137843183/nav.xhtml">
+            <div class="link-div">
+                <p class="headline">Learn Enough HTML, CSS and Layout to Be Dangerous (2022): An Introduction to Modern Website Creation and Templating Systems</p>
+                <p class="preview">Authors: Michael Hartl, Lee Donahoe</p>
+            </div>
+        </a>    
+        <a class="link-a" data-tag="cs" href="learn-enough-javascript-9780137843763/nav.xhtml">
+            <div class="link-div">
+                <p class="headline">Learn Enough JavaScript to Be Dangerous (2022): Write Programs, Publish Packages, and Develop Interactive Websites with JavaScript</p>
+                <p class="preview">Authors: Michael Hartl</p>
+            </div>
+        </a>            
+        <a class="link-a" data-tag="cs" href="learn-enough-python-9780138051143/nav.xhtml">
+            <div class="link-div">
+                <p class="headline">Learn Enough Python to Be Dangerous (2023): Software Development, Flask Web Apps, and Beginning Data Science with Python</p>
+                <p class="preview">Authors: Michael Hartl</p>
+            </div>
+        </a>    
+        <a class="link-a" data-tag="cs" href="learn-enough-ruby-9780137844241/nav.xhtml">
+            <div class="link-div">
+                <p class="headline">Learn Enough Ruby to Be Dangerous (2022): Write Programs, Publish Gems, and Develop Sinatra Web Apps with Ruby</p>
+                <p class="preview">Authors: Michael Hartl</p>
+            </div>
+        </a>    
+                      
     </div>
 </body>
 <script src="index.js"></script>
