--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
       <a
         class="link-a"
         data-tag="cs"
-        href="head-first-html-9781449324469/OEBPS/toc.ncx"
+        href="head-first-html-9781449324469/OEBPS/toc.html"
       >
         <div class="link-div">
           <p class="headline">Head First HTML and CSS</p>
