--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <button class="tag" id="business">Business</button>
         <button class="tag" id="mental-model">Mental Model</button>
         <button class="tag" id="cs">CS</button>
+        <button class="tag" id="power-bi">Power BI</button>
       </div>
       <a
         class="link-a"
@@ -518,6 +519,75 @@
         <div class="link-div">
           <p class="headline">Learn JavaScript Today</p>
           <p class="preview">Authors: Zell</p>
+        </div>
+      </a>
+
+      <a
+        class="link-a"
+        data-tag="power-bi"
+        href="exam-ref-pl-300-9780137901197/OEBPS/toc.xhtml"
+      >
+        <div class="link-div">
+          <p class="headline">
+            Exam Ref PL-300 Microsoft Power BI Data Analyst
+          </p>
+          <p class="preview">
+            by Daniil Maslyuk Released August 2022 Publisher(s): Microsoft Press
+            ISBN: 9780137901197
+          </p>
+        </div>
+      </a>
+
+      <a
+        class="link-a"
+        data-tag="power-bi"
+        href="microsoft-power-bi-9781484290132/OEBPS/navigation.xhtml"
+      >
+        <div class="link-div">
+          <div class="content">
+            <figure class="t-cover">
+              <img
+                class="t-cover-img"
+                src="https://learning.oreilly.com/library/cover/9781484290132/250w/"
+                alt="Microsoft Power BI Data Analyst Certification Companion: Preparation for Exam PL-300"
+              />
+            </figure>
+
+            <div class="metadata">
+              <h1 class="t-title">
+                Microsoft Power BI Data Analyst Certification Companion:
+                Preparation for Exam PL-300
+              </h1>
+
+              <div class="t-authors">
+                by
+
+                <a href='/search?q=author:"Jessica Jolly"' class="author-name"
+                  >Jessica Jolly</a
+                >
+              </div>
+
+              <div class="t-release-date">Released February 2023</div>
+              <div class="t-publisher">Publisher(s): Apress</div>
+              <div class="t-isbn">ISBN: 9781484290132</div>
+            </div>
+          </div>
+        </div>
+      </a>
+
+      <a
+        class="link-a"
+        data-tag="power-bi"
+        href="microsoft-power-bi-9781803238562/OEBPS/toc.xhtml"
+      >
+        <div class="link-div">
+          <p class="headline">
+            Microsoft Power BI Data Analyst Certification Guide
+          </p>
+          <p class="preview">
+            by Orrin Edenfield, Edward Corcoran Released June 2022 Publisher(s):
+            Packt Publishing ISBN: 9781803238562
+          </p>
         </div>
       </a>
     </div>
